<resources>
    <string name="app_name">ReimbifyApp</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_history">History</string>
    <string name="title_add_request">Add Request</string>
    <string name="label_history">Reimbursement History</string>
    <string name="label_add_request">New Request</string>
    <string name="label_profile">Profile</string>
    <string name="title_profile">Profile</string>
    <string name="title_setting">Setting</string>
    <string name="title_notifications">Notifications</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="display">Display</string>
    <string name="calendar_icon">Calendar Icon</string>
    <string name="default_date">MM/DD/YYYY HH:MM:SS</string>
    <string name="under_review_icon">Under Review Icon</string>
    <string name="under_review">Under Review</string>
    <string name="approved_icon">Approved Icon</string>
    <string name="approved">Approved</string>
    <string name="rejected_icon">Rejected Icon</string>
    <string name="rejected">Rejected</string>
    <string name="receipt_date">Receipt Date</string>
    <string name="default_date_v2">MM/DD/YYYY</string>
    <string name="department">Department</string>
    <string name="finance">Finance</string>
    <string name="amount">Amount</string>
    <string name="_100_000">100.000</string>
    <string name="description">Description</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="search">Search</string>
    <string name="sort_by_date">Sort By Date</string>
    <string-array name="status_reviewed_options">
        <item>All</item>
        <item>Approved</item>
        <item>Rejected</item>
    </string-array>

    <string-array name="status_options">
        <item>All</item>
        <item>Under Review</item>
        <item>Approved</item>
        <item>Rejected</item>
    </string-array>

    <string-array name="department_options">
        <item>All</item>
        <item>HR</item>
        <item>Finance</item>
        <item>IT</item>
    </string-array>

    <string-array name="role_options">
        <item>All</item>
        <item>Admin</item>
        <item>User</item>
    </string-array>

    <string-array name="bank_options">
        <item>Bank 1</item>
        <item>Bank 2</item>
        <item>Bank 3</item>
        <item>Bank 4</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_detail_request">Detail Request</string>
    <string name="nota_image">Nota Image</string>
    <string name="transfer_receipt_image">Transfer Receipt Image</string>
    <string name="details">Details</string>
    <string name="name">Name</string>
    <string name="admin_name">Admin Name</string>
    <string name="account_number">Account Number</string>
    <string name="request_date">Request Date</string>
    <string name="receive_date">Receive Date</string>
    <string name="decline_date">Decline Date</string>
    <string name="reason_decline">Reason Decline</string>
    <string name="default_reason_rejection">Nota Tidak Valid</string>
    <string name="title_accepted_detail">Accepted Detail</string>
    <string name="title_rejected_detail">Rejected Detail</string>
    <string name="title_under_review_detail">Under Review Detail</string>
    <string name="receipt">Receipt</string>
    <string name="upload_icon">Upload Icon</string>
    <string name="upload_your_receipt">Upload Your Receipt</string>
    <string name="open_camera">Open Camera</string>
    <string name="upload">Upload</string>
    <string name="icon_circle">icon circle</string>
    <string name="image_accepted">Image Accepted</string>
    <string name="reimbursement_details">Reimbursement Details</string>
    <string name="date">Date</string>
    <string name="bank_account">Bank Account</string>
    <string name="cancel">Cancel</string>
    <string name="submit_request">Submit Request</string>
    <string name="image_preview">Image Preview\n</string>
    <string name="login_banner">Login Banner</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_subtitle">Log in to track your reimbursements effortlessly.</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="verify">Verify</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp_banner">Verify OTP Banner</string>
    <string name="forgot_password_banner">Forgot Password Banner</string>
    <string name="enter_your_otp">Enter your OTP</string>
    <string name="check_email_otp">Check your email for the code we\'ve sent to verify your account</string>
    <string name="profile_image">Profile Image</string>
    <string name="john_doe">John Doe</string>
    <string name="finance_department">Finance Department</string>
    <string name="sign_out">Sign Out</string>
    <string name="default_bank">Bank Central Asia</string>
    <string name="bank_name">Bank Name</string>
    <string name="default_bank_number">33************22</string>
    <string name="account_name">Account Name</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="main_account">Main Account</string>
    <string name="enter_your_bank_account_name">Enter your bank account name</string>
    <string name="enter_your_account_number">Enter your account number</string>
    <string name="enter_your_bank_name">Enter your bank name</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="account_information">Account Information</string>
    <string name="default_username">P80339</string>
    <string name="default_email">john.doe@company.co.id</string>
    <string name="change_password">Change Password</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="reset_banner">Reset Banner</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_your_password">Enter your new password</string>
    <string name="confirm_your_password">Enter your password again</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="previous_password">Previous Password</string>
    <string name="success">Success!</string>
    <string name="default_success_box">This is default success box</string>
    <string name="failed">Failed</string>
    <string name="default_failed_box">This is default failed message</string>
    <string name="role">Role</string>
    <string name="user">User</string>
    <string name="loading">Loading…</string>
    <string name="new_bank_account">New Bank Account</string>
    <string name="account_holder_name">Account\'s Holder Name</string>
    <string name="enter_bank_account_holder_name">Enter Bank Account Holder\'s Name</string>
    <string name="enter_bank_account_number">Enter Bank Account Number</string>
    <string name="select_bank">Select Bank</string>
    <string name="title">Title</string>
    <string name="enter_title">Enter Title</string>
    <string name="update_bank_account">Update Bank Account</string>
    <string name="reimbursement_history">Reimbursement History</string>
    <string name="track_and_submit_your_expenses_with_ease">Track and submit your expenses with ease!</string>
    <string name="reimbursement_under_review">Reimbursement: Under Review</string>
    <string name="greeting">Hello, %1$s!</string>
    <string name="default_user_name">User</string>
    <string name="requests">Requests</string>
    <string name="reviewed">Reviewed</string>
    <string name="users">Users</string>
    <string name="filter_by_status">Filter by Status</string>
    <string name="filter_by_department">Filter by Department</string>
    <string name="no_request_found">No Reimbursement Request Found</string>
    <string name="search_by_desc">Search by Description</string>
    <string name="default_hello">Hello, John Doe!</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="delete">Delete</string>
    <string name="filter_by_role">Filter by Role</string>
    <string name="no_user_found">No User Found</string>
    <string name="are_you_sure_want_to_delete">Are you sure want to Delete?</string>
    <string name="data_to_delete">Data to delete</string>
    <string name="action">Action</string>
    <string name="add_user">Add User</string>
    <string name="new_user">New User</string>
    <string name="select_role">Select Role</string>
    <string name="register_new_user">Register New User</string>
    <string name="register">Register</string>
    <string name="select_department">Select Department</string>
    <string name="display_setting">Display Setting</string>
    <string name="request_detail">Request Detail</string>
    <string name="request_by">Request by</string>
    <string name="nota">Nota</string>
    <string name="request_description">Request Description</string>
    <string name="review_summary">Review Summary</string>
    <string name="reviewer">Reviewer</string>
    <string name="reviewer_name">Reviewer Name</string>
    <string name="review_date">Review Date</string>
    <string name="notes">Notes</string>
    <string name="response_notes">Response Notes</string>
    <string name="title_request_detail">Request Details</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="approval_section">Approval Section</string>
    <string name="enter_your_approval_notes">Enter your approval notes</string>
    <string name="are_you_sure_want_to_approve">Are you sure want to APPROVE?</string>
    <string name="are_you_sure_want_to_reject">Are you sure want to REJECT?</string>
    <string name="blur_status_icon">Not blur</string>
    <string name="rotation_status_icon">Not rotate</string>
    <string name="crop_status_icon">Not crop</string>
    <string name="amount_pending_reimbursment">Amount Pending Reimbursment</string>
    <string name="amount_approved_reimbursment">Amout Approved Reimbursment</string>
    <string name="rp_10_000_0000_00">RP. 10.000.0000,00</string>
    <string name="reimbursement_status">Persentation Approved, Pending and Rejected</string>
    <string name="reimbursement_amount">Distribution Approved Reimbursment per Category</string>
    <string name="approved_reimbursment_history">Approved Reimbursment History</string>
    <string name="check_image">Check Image</string>
    <string name="error_message_upload">Image upload failed. Please try again</string>
    <string name="failed_upload">Failed</string>
    <string name="request_sent">Success Sent Request!</string>
    <string name="success_message">Your request sent successfully. Please wait for admin to review it.</string>

</resources>