<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_to_approve"
        android:icon="@drawable/task_due_svgrepo_com"
        android:title="@string/requests" />

    <item
        android:id="@+id/navigation_approved"
        android:icon="@drawable/task_square_svgrepo_com"
        android:title="@string/reviewed" />

    <item
        android:id="@+id/navigation_list_user"
        android:icon="@drawable/users_people_svgrepo_com"
        android:title="@string/users" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/settings_24dp_5f6368_fill0_wght400_grad0_opsz24"
        android:title="@string/title_setting" />
</menu>