<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.reimbifyapp.user.ui.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard_user" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.reimbifyapp.user.ui.HistoryFragment"
        android:label="@string/label_history"
        tools:layout="@layout/fragment_history_user">
        <action
            android:id="@+id/action_navigation_history_to_underReviewDetailFragment"
            app:destination="@id/underReviewDetailFragment"
            app:popUpTo="@id/navigation_history" />
        <action
            android:id="@+id/action_navigation_history_to_acceptedDetailFragment"
            app:destination="@id/acceptedDetailFragment"
            app:popUpTo="@id/navigation_history" />
        <action
            android:id="@+id/action_navigation_history_to_rejectedDetailFragment"
            app:destination="@id/rejectedDetailFragment"
            app:popUpTo="@id/navigation_history" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_request"
        android:name="com.example.reimbifyapp.user.ui.AddUserFragment"
        android:label="@string/label_add_request"
        tools:layout="@layout/fragment_add_request_user" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.reimbifyapp.user.ui.ProfileFragment"
        android:label="@string/label_profile"
        tools:layout="@layout/fragment_profile_user" />
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.reimbifyapp.user.ui.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting_user" />
    <fragment
        android:id="@+id/acceptedDetailFragment"
        android:name="com.example.reimbifyapp.user.ui.AcceptedDetailFragment"
        android:label="@string/title_accepted_detail"
        tools:layout="@layout/fragment_accepted_detail" />
    <fragment
        android:id="@+id/rejectedDetailFragment"
        android:name="com.example.reimbifyapp.user.ui.RejectedDetailFragment"
        android:label="@string/title_rejected_detail"
        tools:layout="@layout/fragment_rejected_detail" />
    <fragment
        android:id="@+id/underReviewDetailFragment"
        android:name="com.example.reimbifyapp.user.ui.UnderReviewDetailFragment"
        android:label="@string/title_under_review_detail"
        tools:layout="@layout/fragment_under_review_detail" />
</navigation>

