<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.reimbifyapp.user.ui.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard_user">
        <action
            android:id="@+id/action_dashboard_to_requestDetailFragment"
            app:destination="@id/requestDetailFragment" />
    </fragment>


    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.reimbifyapp.user.ui.HistoryFragment"
        android:label="@string/label_history"
        tools:layout="@layout/fragment_history_user">
        <action
            android:id="@+id/action_navigation_history_to_requestDetailFragment"
            app:destination="@id/requestDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/requestDetailFragment"
        android:name="com.example.reimbifyapp.auth.ui.component.RequestDetailFragment"
        android:label="@string/title_request_detail"
        tools:layout="@layout/fragment_request_detail" />

    <fragment
        android:id="@+id/navigation_add_request"
        android:name="com.example.reimbifyapp.user.ui.AddRequestFragment"
        android:label="@string/label_add_request"
        tools:layout="@layout/fragment_add_request_user" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.reimbifyapp.user.ui.ProfileFragment"
        android:label="@string/label_profile"
        tools:layout="@layout/fragment_profile_user" />
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.reimbifyapp.user.ui.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting_user" />
</navigation>

