<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingVertical="8dp"
    android:showDividers="end"
    android:divider="?android:attr/dividerVertical"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="start"
        android:padding="4dp"
        android:text="@string/username"
        android:textSize="12sp"
        android:textColor="@color/text_color_setting" />

    <TextView
        android:id="@+id/tv_department"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="start"
        android:padding="4dp"
        android:text="@string/department"
        android:textSize="12sp"
        android:textColor="@color/text_color_setting" />

    <TextView
        android:id="@+id/tv_role"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="start"
        android:padding="4dp"
        android:text="@string/role"
        android:textSize="12sp"
        android:textColor="@color/text_color_setting" />

    <ImageButton
        android:id="@+id/btn_delete"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="4dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/delete"
        android:src="@drawable/delete_2_svgrepo_com"
        app:tint="@color/cancel_red" />
</LinearLayout>
